Wed Sep 22 08:52:54 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ciao/Containers/Container_Base_T.h:
        * ciao/Containers/Session/Session_Container.h:
        * ciao/Containers/Session/Session_Container.cpp:
        * ciao/Contexts/Context_Impl_Base.h:
        * ciao/Contexts/Context_Impl_Base.cpp:
        * ciao/Contexts/Session/Context_Impl_T.h:
        * ciao/Contexts/Session/Context_Impl_T.cpp:
        * ciao/Deployment/Handlers/Container_Handler.cpp:
        * ciao/Servants/Session/Servant_Impl_T.h:
        * ciao/Servants/Session/Servant_Impl_T.cpp:
          Use Session_Container for entry points

Wed Sep 22 08:52:25 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/ami4ccm/examples/Hello/descriptors/run_test.pl:
        * connectors/ami4ccm/tests/AsynchT/descriptors/run_test.pl:
        * connectors/ami4ccm/tests/DelReplyH/descriptors/run_test.pl:
        * connectors/ami4ccm/tests/Exceptions/descriptors/run_test.pl:
        * connectors/ami4ccm/tests/GetComp/descriptors/run_test.pl:
        * connectors/ami4ccm/tests/InterInArgs/descriptors/run_test.pl:
        * connectors/ami4ccm/tests/InterInOutArgs/descriptors/run_test.pl:
        * connectors/ami4ccm/tests/InterMulti/descriptors/run_test.pl:
        * connectors/ami4ccm/tests/InterOutArgs/descriptors/run_test.pl:
        * connectors/ami4ccm/tests/InterReturn/descriptors/run_test.pl:
        * connectors/ami4ccm/tests/NoReplyH/descriptors/run_test.pl:
        * connectors/ami4ccm/tests/OneProcess/descriptors/run_test.pl:
        * connectors/ami4ccm/tests/OneReplyH/descriptors/run_test.pl:
        * connectors/ami4ccm/tests/SimplexMulti/descriptors/run_test.pl:
        * connectors/ami4ccm/tests/ThreeComp/descriptors/run_test.pl:
        * connectors/ami4ccm/tests/UsesMulti/descriptors/run_test.pl:
        * connectors/ami4ccm/tutorials/Hello/Hello_asm/Deployment/scripts/run_test.pl:
        * connectors/dds4ccm/examples/Hello/descriptors/run_1_to_5.pl: