@@ -1,12 +1,10 @@
 // $Id$
 
 #include "Home_Servant_Impl_Base.h"
-#include "ciao/Containers/Container_BaseC.h"
 
 namespace CIAO
 {
-  Home_Servant_Impl_Base::Home_Servant_Impl_Base (Container_ptr c)
-    : container_ (Container::_duplicate(c))
+  Home_Servant_Impl_Base::Home_Servant_Impl_Base (void)
   {
   }
 
